src/main/java/org/example/exceptions/errors/ErrorCode.java
package org.example.exceptions.errors;

public interface ErrorCode {

    String getCode();

    String getDescription();

}
